Check with alert

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <script src="lib/wbsql-store.js"></script>
 <script src="js/storage/memory-store.js"></script>
 <script src="js/main.js"></script>
+<script src="phonegap.js"></script>
 
 </body>
 </html>
